regression/reference/error/wraperror.h
// wraperror.h
// This file is generated by Shroud nowrite-version. Do not edit.
// Copyright (c) 2017-2023, Lawrence Livermore National Security, LLC and
// other Shroud Project Developers.
// See the top-level COPYRIGHT file for details.
//
// SPDX-License-Identifier: (BSD-3-Clause)
//
/**
 * \file wraperror.h
 * \brief Shroud generated wrapper for error library
 */
// For C users and C++ implementation

#ifndef WRAPERROR_H
#define WRAPERROR_H

// shroud
#include "typeserror.h"

// splicer begin CXX_declarations
// splicer end CXX_declarations

#ifdef __cplusplus
extern "C" {
#endif

// splicer begin C_declarations
// splicer end C_declarations

void ERR_BadFstatements(void);

no-such-type ERR_BadFstatements_extrawrapper(void);

void ERR_AssumedRank(int * data);

void ERR_AssumedRank_0d(int * data);

void ERR_AssumedRank_1d(int * data);

void ERR_AssumedRank_2d(int * data);

#ifdef __cplusplus
}
#endif

#endif  // WRAPERROR_H
